Sul-did a little a reformmatting on the index html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Adriana Cardenas</title>
-
+    <link rel="stylesheet" href="css/main.css">
 
     <!-- CONSIDER:
         -mobile site, downsize animations
@@ -22,148 +22,142 @@
 
 <!-- TITLE: center,fit slide to single page, swipe to nagivate  -->
 
-<section id="Titlepage">
-    <h1>Adriana Cardenas</h1>
-    <p><i>Healthcare, Programming, Research, Biotechnology, Sales</i></p>
-
-        <!-- buttons for navigation right now -->
-        <a href="#edu_section"><input type="button" value="EDUCATION"></a>
-        <a href="#research_section"><input type="button" value="RESEARCH"></a>
-        <a href="#tech_section"><input type="button" value="TECHNOLOGY"></a>
-        <input type="button" value="LABORATORY">
-        <input type="button" value="SALES">
-
-</section>
 </head>
+<body>
 
-<!-- education section, create picture of title, picture related to UT, visually pleasing features -->
+    ww
+    <!-- education section, create picture of title, picture related to UT, visually pleasing features -->
 
-<p>
-<section>
-    <h1 id ="edu_section">EDUCATION</h1>
+    <section>
+        <h1 id ="edu_section">EDUCATION</h1>
 
-        <p><i>(current)</i>
-        <br><strong>University of Texas</strong>
-        <br>Class of 2019
-        <br><i>Austin, TX</i></p>
+            <p><i>(current)</i>
+            <br><strong>University of Texas</strong>
+            <br>Class of 2019
+            <br><i>Austin, TX</i></p>
 
-    <p>B.S.A in Biochemistry
-    <br><a href="https://www.cs.utexas.edu/undergraduate-program/academics/elements-computing" >Elements of Computing Certificate</a>
-    <br>Minor in Psychology</p>
+        <p>B.S.A in Biochemistry
+        <br><a href="https://www.cs.utexas.edu/undergraduate-program/academics/elements-computing" >Elements of Computing Certificate</a>
+        <br>Minor in Psychology</p>
 
-</section>
+    </section>
 
 
-<!-- research section, create picture of title-->
+    <!-- research section, create picture of title-->
 
-<section>
-    <h1 id = "research_section">RESEARCH</h1>
-    <!-- center, header 2 font, its own page, cytochrome c oxidase model -->
-    <i>(current)</i>
+    <section>
+        <h1 id = "research_section">RESEARCH</h1>
+        <!-- center, header 2 font, its own page, cytochrome c oxidase model -->
+        <i>(current)</i>
 
-    <!-- current lab, strong emphasis on this -->
-    <h2>Gonzalez-Lima Lab</h2>
-        <h3>Texas Consortium of Behavioral Neuroscience</h3>
-        <i>Undergraduate Research Assistant working under Lida Huang, PhD, Francisco Gonzalez-Lima, PhD</i>
+        <!-- current lab, strong emphasis on this -->
+        <h2>Gonzalez-Lima Lab</h2>
+            <h3>Texas Consortium of Behavioral Neuroscience</h3>
+            <i>Undergraduate Research Assistant working under Lida Huang, PhD, Francisco Gonzalez-Lima, PhD</i>
 
-        <!--- Script for cleaner view-->
-        <p><b><i>Mission (+)</i></b>
-        <ul>
+            <!--- Script for cleaner view-->
+            <p><b><i>Mission (+)</i></b>
+            <ul>
 
-            <li>Prevent neurocognitive and emotional disorders</li>
-            <li>Understand underlying brain mechanisms</li>
-            <li>Advance innovative non-invasive treatments</li>
+                <li>Prevent neurocognitive and emotional disorders</li>
+                <li>Understand underlying brain mechanisms</li>
+                <li>Advance innovative non-invasive treatments</li>
 
-        </ul>
-        </p>
+            </ul>
+            </p>
 
-        <!-- -->
+            <!-- -->
+            <p>
+            <b><i>Project Involvement (+)</i></b>
+            <ol>
+            <li><div><a href="https://labs.la.utexas.edu/gonzalez-lima/">Cognitive Enhancement in Adults, Ages 18 and over</a></div></li>
+                <li><div><a href="https://labs.la.utexas.edu/gonzalez-lima/">Cognitive Enhancement in Adults, Ages 45 and over</a></div></li>
+            </ol>
+            </p>
+
+            <!-- -->
+            <p><b><i>Responsibilities (+)</i></b>
+            <ul>
+            <li>Systematized EEG data using MATLAB for further analysis of low level light therapy (LLT) versus EEG tone</li>
+            <li>Assisted in speedy refinement of data collected from 2003</li>
+            <li>Worked closely with all levels of project to assist in management, limitations, and deadlines</li>
+            <li>Ran participant visits and evaluated resulting therapeutic effects on cognitive function</li>
+            <li>Investigated hemodynamic responses associated with neuron behavior using fNIRS</li>
+            </ul>
+
+        <!-- FRI section -->
+
+        <i>Aug 2014- June 2015</i>
+        <h2>Synthesis & Biological Recognition Stream</h2>
+        <h3>University of Texas Freshman Research Initiative</h3>
+        <i>Undergraduate Research Assistant</i>
         <p>
-        <b><i>Project Involvement (+)</i></b>
-        <ol>
-        <li><div><a href="https://labs.la.utexas.edu/gonzalez-lima/">Cognitive Enhancement in Adults, Ages 18 and over</a></div></li>
-            <li><div><a href="https://labs.la.utexas.edu/gonzalez-lima/">Cognitive Enhancement in Adults, Ages 45 and over</a></div></li>
-        </ol>
+            <b><i>Focus (+)</i></b>
+            <ul>
+            <li><div>Investigated the design and synthesis of small organic molecules that have the potential to bind tightly to significant proteins </div></li>
+            <li><div>Mastery of quantitative titration and chromatography techniques</div></li>
+            <li><div>Introduction to protein modeling program pyMOL</div></li>
+            </ul>
         </p>
 
-        <!-- -->
-        <p><b><i>Responsibilities (+)</i></b>
-        <ul>
-        <li>Systematized EEG data using MATLAB for further analysis of low level light therapy (LLT) versus EEG tone</li>
-        <li>Assisted in speedy refinement of data collected from 2003</li>
-        <li>Worked closely with all levels of project to assist in management, limitations, and deadlines</li>
-        <li>Ran participant visits and evaluated resulting therapeutic effects on cognitive function</li>
-        <li>Investigated hemodynamic responses associated with neuron behavior using fNIRS</li>
-        </ul>
 
-    <!-- FRI section -->
-
-    <i>Aug 2014- June 2015</i>
-    <h2>Synthesis & Biological Recognition Stream</h2>
-    <h3>University of Texas Freshman Research Initiative</h3>
-    <i>Undergraduate Research Assistant</i>
-    <p>
-        <b><i>Focus (+)</i></b>
-        <ul>
-        <li><div>Investigated the design and synthesis of small organic molecules that have the potential to bind tightly to significant proteins </div></li>
-        <li><div>Mastery of quantitative titration and chromatography techniques</div></li>
-        <li><div>Introduction to protein modeling program pyMOL</div></li>
-        </ul>
-    </p>
-
-
-</section>
-<section>
-    <h1 id="tech_section">TECHNOLOGY</h1>
-    <p>
-        <i><b>Systems (+)</b></u></i>
-    <ul>
-        <li>macOS</li>
-        <li>Windows</li>
-        <li>Linux</li>
-    </ul><br>
-    <i><b>Languages (+)</b></i>
-    <ul>
-        <li>Python (advanced)</li>
-        <li>R (intermediate)</li>
-        <li>HTML (intermediate)</li>
-        <li>pyMOL (basic)</li>
-        <li>MATLAB (basic)</li>
-    </p>
-    </ul>
-
-
-    <h1 id="lab_section">LABORATORY</h1>
-    <p>
-        <i><u><b>Techniques (+)</b></u></i>
-        <ul>
-            <li>Column chromatography</li>
-            <li>Filtration</li>
-            <li>Extraction</li>
-            <li>Gas chromatography</li>
-            <li>Nucleophilic substition</li>
-            <li>PCR/qPCR</li>
-            <li>Gel electrophoresis</li>
-            <li>Primer design</li>
-            <li>Protein binding visualization</li>
-            <li>Enzyme kinetics</li>
-            <li>Gene cloning and expression</li>
-            <li>Plasmid transformation</li>
-    </ul>
-    </p>
-    <i><u><b>Human Research (+)</b> </u></i>
+    </section>
+    <section>
+        <h1 id="tech_section">TECHNOLOGY</h1>
         <p>
-        <ul>
+            <i>
+                <b>Systems (+)</b>
+            </i>
+            <ul>
+                <li>macOS</li>
+                <li>Windows</li>
+                <li>Linux</li>
+            </ul>
+            <br>
+            <i><b>Languages (+)</b></i>
+            <ul>
+                <li>Python (advanced)</li>
+                <li>R (intermediate)</li>
+                <li>HTML (intermediate)</li>
+                <li>pyMOL (basic)</li>
+                <li>MATLAB (basic)</li>
+            </ul>
+        </p>
 
-        <li>Low level light therapy</li>
-        <li>EEG electrode application</li>
-        <li>EEG measuring</li>
-        <li>MoCA analysis</li>
 
-
-
+        <h1 id="lab_section">LABORATORY</h1>
+        <p>
+            <i><u><b>Techniques (+)</b></u></i>
+            <ul>
+                <li>Column chromatography</li>
+                <li>Filtration</li>
+                <li>Extraction</li>
+                <li>Gas chromatography</li>
+                <li>Nucleophilic substition</li>
+                <li>PCR/qPCR</li>
+                <li>Gel electrophoresis</li>
+                <li>Primer design</li>
+                <li>Protein binding visualization</li>
+                <li>Enzyme kinetics</li>
+                <li>Gene cloning and expression</li>
+                <li>Plasmid transformation</li>
         </ul>
         </p>
-</section>
+        <i><u><b>Human Research (+)</b> </u></i>
+            <p>
+            <ul>
+
+            <li>Low level light therapy</li>
+            <li>EEG electrode application</li>
+            <li>EEG measuring</li>
+            <li>MoCA analysis</li>
+
+
+
+            </ul>
+            </p>
+    </section>
+
+    <script src="js/index.js"></script>
 </body>
 </html>
