--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- education section, create picture of title, picture related to UT, visually pleasing features -->
 
     <section>
-        <h1 id ="edu_section">EDUCATION</h1>
+        <h1 id ="edu_section">EDUCATION2</h1>
 
             <p><i>(current)</i>
             <br><strong>University of Texas</strong>
