carousel contents changed, education section added, responsibilities shortened

--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
 
     <!-- CONSIDER:
         -mobile site, downsize animations
-        -color schema, font schema, picture links, background (light grid)
-        -number of sections, which can be nested?
-        -
+        -color schema, picture links
         -->
 
     <!-- IMAGE DESIGN:
-        create picture with bold name and outlined interests
         create contact button links
-        create navigation bar
         cytochrome c oxidase model for Gonzalez lima lab section
 
         -->
@@ -39,10 +35,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="resume.html">Resume<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="resume.html">RESUME<span class="sr-only">(current)</span></a>
       </li>
         <li class="nav-item active">
-        <a class="nav-link" href="https://www.linkedin.com/in/acard/">Linkedin<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://www.linkedin.com/in/acard/">LINKEDIN<span class="sr-only">(current)</span></a>
       </li>
     <!--   <li class="nav-item active">
         <a class="nav-link" href="#lab_section">Laboratory<span class="sr-only">(current)</span></a>
@@ -86,7 +82,7 @@
           <!-- Slide One - Set the background image for this slide in the line below -->
           <div class="carousel-item active" style="background-image: url('image/elodie_seguin.jpg')">
               <div class="carousel-header">
-              <h1 class="display-1"><i>Adriana Cardenas</i></h1>
+                  <h1 class="display-1"><i><b>Adriana Cardenas</b></i></h1>
               </div>
               <div class="carousel-content">
                   <i>
@@ -96,27 +92,42 @@
                   </i>
               </div>
           </div>
+
+
+
           <!-- Slide Two - Set the background image for this slide in the line below -->
           <div class="carousel-item" style="background-image: url('image/elodie_seguin2.jpg')">
               <div class="carousel-content2">
+                  <h1><b>EDUCATION</b></h1>
+
+
+            <p><i>(current)</i>
+            <br><strong>University of Texas</strong>
+            <br>Class of 2019
+            <br><i>Austin, TX</i></p>
+
+        <p>B.S.A in Biochemistry
+        <br><a href="https://www.cs.utexas.edu/undergraduate-program/academics/elements-computing" >Elements of Computing Certificate</a>
+        <br>Minor in Psychology</p>
+
+              </div>
+
+
+          </div>
+          <!-- Slide Three - Set the background image for this slide in the line below -->
+          <div class="carousel-item" style="background-image: url('image/elodie_seguin3.jpg')">
+              <div class="carousel-content3">
                   <h1><b>RESEARCH</b></h1>
                   <i>
 
 
-            <h3>Gonzalez-Lima Lab</h3>
+            <h3>1.Gonzalez-Lima Lab</h3>
             <h4>Texas Consortium of Behavioral Neuroscience</h4>
-            <i>Undergraduate Research Assistant working under Lida Huang, PhD, Francisco Gonzalez-Lima, PhD</i>
-
+            <i>Undergraduate Research Assistant working under Lida Huang, PhD</i><br>
+            <i>(started August 2017)</i><br>
+            <br>
             <!--- Script for cleaner view-->
-            <p><b><i>Mission (+)</i></b>
-            <ul>
 
-                <li>Prevent neurocognitive and emotional disorders</li>
-                <li>Understand underlying brain mechanisms</li>
-                <li>Advance innovative non-invasive treatments</li>
-
-            </ul>
-            </p>
 
             <!-- -->
             <p>
@@ -124,28 +135,38 @@
             <ol>
             <li><div><a href="https://labs.la.utexas.edu/gonzalez-lima/">Cognitive Enhancement in Adults, Ages 18 and over</a></div></li>
                 <li><div><a href="https://labs.la.utexas.edu/gonzalez-lima/">Cognitive Enhancement in Adults, Ages 45 and over</a></div></li>
+                      <li><div>Computer vision and Emotion</div></li>
             </ol>
             </p>
                                      <!-- -->
             <p><b><i>Responsibilities (+)</i></b>
             <ul>
-            <li>Systematized EEG data using MATLAB for further analysis of low level light therapy (LLT) versus EEG tone</li>
-            <li>Assisted in speedy refinement of data collected from 2003</li>
-            <li>Worked closely with all levels of project to assist in management, limitations, and deadlines</li>
-            <li>Ran participant visits and evaluated resulting therapeutic effects on cognitive function</li>
-            <li>Investigated hemodynamic responses associated with neuron behavior using fNIRS</li>
+            <li>Analysis of EEG files using MATLAB</li>
+            <li>Efficient refinement of experimental data</li>
+            <li>Bridging of technology with biomolecular interactions</li>
             </ul>
                   </i>
+
+                  <h3><i>2. Synthesis and Biological Recognition Stream</i></h3>
+                  <h4>Freshman Research Initiative at University of Texas</h4>
+                  <i>Undergraduate Research Assistant working under Elizabeth Ilardi</i>
+                  <i>(August 2014 to May 2015)</i>
+                  <br>
+
+                  <p>
+                      <b><i>Responsibilities (+)</i></b>
+                      <ul>
+                  <li>Mastery of organic chemistry purification techniques</li>
+                  <li>Introduction to protein modeling</li>
+
+
+
+
+                      </ul>
+
+                  </p>
+
               </div>
-
-
-          </div>
-          <!-- Slide Three - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('image/elodie_seguin3.jpg')">
-            <div class="carousel-caption d-none d-md-block">
-              <h3>Contact</h3>
-              <p>contact info</p>
-            </div>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
