nav bar is now fixed within carousel slide, must be fixed within all slides

--- a/index.html
+++ b/index.html
@@ -18,54 +18,10 @@
 
         -->
 
-<!-- TITLE: center,fit slide to single page, swipe to nagivate  -->
+<!-- TITLE: center,fit slide to single page, swipe to navigate  -->
 
 </head>
 <body>
-
-    <!-- education section, create picture of title, picture related to UT, visually pleasing features -->
-
-    <section id ="nav_section">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="resume.html">RESUME<span class="sr-only">(current)</span></a>
-      </li>
-        <li class="nav-item active">
-        <a class="nav-link" href="https://www.linkedin.com/in/acard/">LINKEDIN<span class="sr-only">(current)</span></a>
-      </li>
-    <!--   <li class="nav-item active">
-        <a class="nav-link" href="#lab_section">Laboratory<span class="sr-only">(current)</span></a>
-      </li>
-    <!---  <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          GO TO:
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-      --->
-    </ul>
-
-  </div>
-</nav>
-
-
-
-
 
 
     </section>
@@ -80,7 +36,28 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active" style="background-image: url('image/elodie_seguin.jpg')">
+
+            <div class="carousel-item active" style="background-image: url('image/elodie_seguin.jpg')">
+            <section id ="nav_section">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="#"></a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                         <span class="navbar-toggler-icon"></span>
+                             </button>
+
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                 <a class="nav-link" href="resume.html">RESUME<span class="sr-only">(current)</span></a>
+                    </li>
+        <li class="nav-item active">
+        <a class="nav-link" href="https://www.linkedin.com/in/acard/">LINKEDIN<span class="sr-only">(current)</span></a>
+      </li>
+
+    </ul>
+
+  </div>
+</nav>
               <div class="carousel-header">
                   <h1 class="display-1"><i><b>Adriana Cardenas</b></i></h1>
               </div>
@@ -109,7 +86,6 @@
         <p>B.S.A in Biochemistry
         <br><a href="https://www.cs.utexas.edu/undergraduate-program/academics/elements-computing" >Elements of Computing Certificate</a>
         <br>Minor in Psychology</p>
-
               </div>
 
 
