Made some edits to your css code and html stuff

--- a/index.html
+++ b/index.html
@@ -27,50 +27,44 @@
 
     <section id ="nav_section">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+          <a class="navbar-brand" href="#"></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="resume.html">RESUME<span class="sr-only">(current)</span></a>
-      </li>
-        <li class="nav-item active">
-        <a class="nav-link" href="https://www.linkedin.com/in/acard/">LINKEDIN<span class="sr-only">(current)</span></a>
-      </li>
-    <!--   <li class="nav-item active">
-        <a class="nav-link" href="#lab_section">Laboratory<span class="sr-only">(current)</span></a>
-      </li>
-    <!---  <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          GO TO:
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-      --->
-    </ul>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="resume.html">RESUME<span class="sr-only">(current)</span></a>
+              </li>
+                <li class="nav-item active">
+                <a class="nav-link" href="https://www.linkedin.com/in/acard/">LINKEDIN<span class="sr-only">(current)</span></a>
+              </li>
+            <!--   <li class="nav-item active">
+                <a class="nav-link" href="#lab_section">Laboratory<span class="sr-only">(current)</span></a>
+              </li>
+            <!---  <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  GO TO:
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#">Disabled</a>
+              </li>
+              --->
+                </ul>
 
-  </div>
-</nav>
-
-
-
-
-
-
+              </div>
+        </nav>
     </section>
 
-    <section id ="carousel_section">
+    <section id ="carousel_section h-100">
         <header>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -80,16 +74,15 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active" style="background-image: url('image/elodie_seguin.jpg')">
+          <!-- The image you have chosen here is really low resolution maybe you can maybe use a gradient which might be more slick -->
+          <div class="carousel-item active align-items-center" style="background-image: url('image/elodie_seguin.jpg')">
               <div class="carousel-header">
-                  <h1 class="display-1"><i><b>Adriana Cardenas</b></i></h1>
+                  <h1 class="carousel-item__carousel-header--title d-flex justify-content-center">Adriana Cardenas</h1>
               </div>
-              <div class="carousel-content">
-                  <i>
-                  <h3>Technology</h3>
-                  <h3>Biochemistry</h3>
-                  <h3>Research</h3>
-                  </i>
+              <div class="carousel-content d-flex justify-content-center">
+                  <h3 class="carousel-item__carousel-content--items">Technology</h3>
+                  <h3 class="carousel-item__carousel-content--items">Biochemistry</h3>
+                  <h3 class="carousel-item__carousel-content--items">Research</h3>
               </div>
           </div>
 
