--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <a class="nav-link" href="https://www.linkedin.com/in/acard/">LINKEDIN<span class="sr-only">(current)</span></a>
               </li>
 
+
                 </ul>
 
               </div>
@@ -59,7 +60,7 @@
         <div class="carousel-inner" role="listbox">
           <!-- Slide One - Set the background image for this slide in the line below -->
           <!-- The image you have chosen here is really low resolution maybe you can maybe use a gradient which might be more slick -->
-          <div class="carousel-item active align-items-center" style="background-image: url('image/elodie_seguin.jpg')">
+          <div class="carousel-item active align-items-center" style="background-image: linear-gradient(180deg, #ffffff, #d3e4ff)">
               <div class="carousel-header">
                   <h1 class="carousel-item__carousel-header--title d-flex justify-content-center">Adriana Cardenas</h1>
               </div>
@@ -73,7 +74,7 @@
 
 
           <!-- Slide Two - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('image/elodie_seguin2.jpg')">
+          <div class="carousel-item" style="background-image: linear-gradient(180deg, #ffffff, #d3e4ff)">
               <div class="carousel-content2">
                   <h1><b>EDUCATION</b></h1>
 
@@ -92,7 +93,7 @@
 
           </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('image/elodie_seguin3.jpg')">
+          <div class="carousel-item" style="background-image: linear-gradient(180deg, #ffffff, #d3e4ff)">
               <div class="carousel-content3">
                   <h1><b>RESEARCH</b></h1>
                   <i>
